--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Website to see the current moon phase in a simple and pretty way">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>moon-face</title>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
+    <title>Moonface</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but moon-face doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    <noscript>3
+      <strong>Website to see the current moon phase in a simple and pretty way.</strong>
+      <br>
+      <strong>It needs javascript to run</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
