--- a/src/assets/fontello/demo.html
+++ b/src/assets/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?88968094');
-      src: url('./font/fontello.eot?88968094#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?88968094') format('woff'),
-           url('./font/fontello.ttf?88968094') format('truetype'),
-           url('./font/fontello.svg?88968094#fontello') format('svg');
+      src: url('./font/fontello.eot?79999343');
+      src: url('./font/fontello.eot?79999343#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?79999343') format('woff'),
+           url('./font/fontello.ttf?79999343') format('truetype'),
+           url('./font/fontello.svg?79999343#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -299,6 +299,8 @@ body {
     <div class="container" id="icons">
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe800"><i class="demo-icon icon-location">&#xe800;</i> <span class="i-name">icon-location</span><span class="i-code">0xe800</span></div>
+        <div class="the-icons span3" title="Code: 0xe801"><i class="demo-icon icon-right-open">&#xe801;</i> <span class="i-name">icon-right-open</span><span class="i-code">0xe801</span></div>
+        <div class="the-icons span3" title="Code: 0xe802"><i class="demo-icon icon-left-open">&#xe802;</i> <span class="i-name">icon-left-open</span><span class="i-code">0xe802</span></div>
         <div class="the-icons span3" title="Code: 0xf133"><i class="demo-icon icon-calendar-empty">&#xf133;</i> <span class="i-name">icon-calendar-empty</span><span class="i-code">0xf133</span></div>
       </div>
     </div>
